--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  camera: ^0.10.5+5
+  google_mlkit_text_recognition: ^0.10.0
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
