--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   google_mlkit_text_recognition: ^0.10.0
   permission_handler: ^11.0.1
   rflutter_alert: ^2.0.7
+  firebase_core: ^2.20.0
+  firebase_auth: ^4.12.0
+  cloud_firestore: ^4.12.0
+  firebase_storage: ^11.4.0
 
 dev_dependencies:
   flutter_test:
